--- a/RFG Texture Editor Redux/RFG Texture Editor Redux.csproj
+++ b/RFG Texture Editor Redux/RFG Texture Editor Redux.csproj
@@ -52,6 +52,11 @@
       <DependentUpon>Warning.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="RFGEdit\RFG\FileFormats\PegEntry.cs" />
     <Compile Include="RFGEdit\RFG\FileFormats\PegFile.cs" />
     <Compile Include="RFGEdit\RFG\FileFormats\PegFormat.cs" />
@@ -66,8 +71,15 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="PEGEditor\MainForm.resources" />
+    <EmbeddedResource Include="PEGEditor\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PEGEditor\Properties\Resources.resources" />
     <EmbeddedResource Include="PEGEditor\Warning.resources" />
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
