--- a/RFG Texture Editor Redux/RFG Texture Editor Redux.csproj
+++ b/RFG Texture Editor Redux/RFG Texture Editor Redux.csproj
@@ -14,6 +14,8 @@
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>TextureEditor.App</StartupObject>
