Copy BinaryHelpers class from RfgTools
Has some extension methods that are nice for binary formats. This is a holdover until this tool is switched to using RfgTools or merged into OGE

--- a/RFG Texture Editor Redux/RFG Texture Editor Redux.csproj
+++ b/RFG Texture Editor Redux/RFG Texture Editor Redux.csproj
@@ -63,6 +63,7 @@
     </ApplicationDefinition>
     <Compile Include="Peg\Util.cs" />
     <Compile Include="Squish.cs" />
+    <Compile Include="Utility\BinaryHelpers.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -116,5 +117,6 @@
     </Content>
     <Resource Include="Images\Checker.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
